compiler/src/snapshots/compiler__grammar_test__snapshot_success@multi_assignment.tapir.snap
---
source: compiler/src/grammar_test.rs
expression: ast
input_file: compiler/src/snapshot_tests/grammar/multi_assignment.tapir
---
Script(
  property_declarations: [],
  globals: [],
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "a",
                ),
                ty: None,
              ),
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "b",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(1),
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Integer(2),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "x",
                ),
                ty: None,
              ),
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "y",
                ),
                ty: None,
              ),
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "z",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Fix,
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Fix,
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Fix,
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "p",
                ),
                ty: None,
              ),
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "q",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Call(
                  name: "returns_two",
                  arguments: [],
                ),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "i",
                ),
                ty: None,
              ),
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "j",
                ),
                ty: None,
              ),
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "k",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Call(
                  name: "returns_three",
                  arguments: [],
                ),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            idents: [
              Ident(
                span: "[span]",
                ident: "a",
              ),
              Ident(
                span: "[span]",
                ident: "b",
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(3),
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Integer(4),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            idents: [
              Ident(
                span: "[span]",
                ident: "p",
              ),
              Ident(
                span: "[span]",
                ident: "q",
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Call(
                  name: "returns_two",
                  arguments: [],
                ),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            idents: [
              Ident(
                span: "[span]",
                ident: "a",
              ),
              Ident(
                span: "[span]",
                ident: "b",
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Variable("b"),
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Variable("a"),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "m",
                ),
                ty: None,
              ),
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "n",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Call(
                  name: "foo",
                  arguments: [],
                ),
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Call(
                  name: "bar",
                  arguments: [],
                ),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
    Function(
      name: "returns_two",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Return(
            values: [
              Expression(
                span: "[span]",
                kind: Integer(1),
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Fix,
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [
          TypeWithLocation(
            t: Int,
            span: "[span]",
          ),
          TypeWithLocation(
            t: Fix,
            span: "[span]",
          ),
        ],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
    Function(
      name: "returns_three",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Return(
            values: [
              Expression(
                span: "[span]",
                kind: Integer(1),
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Integer(2),
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Integer(3),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [
          TypeWithLocation(
            t: Int,
            span: "[span]",
          ),
          TypeWithLocation(
            t: Int,
            span: "[span]",
          ),
          TypeWithLocation(
            t: Int,
            span: "[span]",
          ),
        ],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
    Function(
      name: "foo",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Return(
            values: [
              Expression(
                span: "[span]",
                kind: Integer(1),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [
          TypeWithLocation(
            t: Int,
            span: "[span]",
          ),
        ],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
    Function(
      name: "bar",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Return(
            values: [
              Expression(
                span: "[span]",
                kind: Integer(2),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [
          TypeWithLocation(
            t: Int,
            span: "[span]",
          ),
        ],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
