compiler/src/snapshots/compiler__grammar_test__snapshot_success@non_associative_comparison.tapir.snap
---
source: compiler/src/grammar_test.rs
expression: ast
input_file: compiler/src/snapshot_tests/grammar/non_associative_comparison.tapir
---
Script(
  property_declarations: [],
  globals: [],
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "x",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: BinaryOperation(
                  lhs: Expression(
                    span: "[span]",
                    kind: BinaryOperation(
                      lhs: Expression(
                        span: "[span]",
                        kind: Integer(3),
                        meta: {},
                      ),
                      operator: EqEq,
                      rhs: Expression(
                        span: "[span]",
                        kind: Integer(5),
                        meta: {},
                      ),
                    ),
                    meta: {},
                  ),
                  operator: EqEq,
                  rhs: Expression(
                    span: "[span]",
                    kind: Bool(true),
                    meta: {},
                  ),
                ),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {},
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
