compiler/src/snapshots/compiler__grammar_test__snapshot_tests.snap
---
source: crates/tapir-script/compiler/src/grammar_test.rs
expression: ast
input_file: crates/tapir-script/compiler/src/snapshot_tests/grammar/variables_and_properties.tapir
---
[
  Statement(
    span: "[span]",
    kind: VariableDeclaration(
      ident: "x",
      value: Expression(
        span: "[span]",
        kind: Integer(3),
      ),
    ),
  ),
  Statement(
    span: "[span]",
    kind: Assignment(
      ident: "my_property",
      value: Expression(
        span: "[span]",
        kind: BinaryOperation(
          lhs: Expression(
            span: "[span]",
            kind: Integer(2),
          ),
          operator: Mul,
          rhs: Expression(
            span: "[span]",
            kind: BinaryOperation(
              lhs: Expression(
                span: "[span]",
                kind: Variable("x"),
              ),
              operator: Add,
              rhs: Expression(
                span: "[span]",
                kind: Integer(5),
              ),
            ),
          ),
        ),
      ),
    ),
  ),
]
